# computational-pathology-ai-lab

./: .gitignore  .pre-commit-config.yaml  .zenodo.json  CHANGELOG.md  CITATION.bib  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATA_CARD.md  Dockerfile  METADATA_UPDATE_MANIFEST.txt  MODEL_CARD.md  Makefile  PREPARE_WINDOWS.bat  PROJECT_FILE_TREE.txt  README.md  README_FIRST_FA.md  SECURITY.md  SEO_UPDATE_MANIFEST.txt  SEO_VALIDATION_REPORT.txt  VALIDATION_REPORT.txt  codemeta.json  docker-compose.yml  dvc.yaml  environment.yml  index.html  params.yaml  pyproject.toml  requirements-optional.txt  sitemap.xml  style.css
app/: streamlit_app.py
book/: CITATION.bib  README.md  REPLACEMENT_INSTRUCTIONS.md  book_metadata.json
configs/: baseline_cnn.yaml  convnext_tiny.yaml  densenet121.yaml  efficientnet_b0.yaml  foundation_adapter.yaml  mil.yaml  resnet18.yaml  tiny_vit.yaml
data/: README.md
deployment/: README.md
docs/: ACADEMIC_PORTFOLIO.md  ARCHITECTURE.md  BENCHMARK_PROTOCOL.md  CLINICAL_AND_ETHICAL_LIMITATIONS.md  EXECUTION_STATUS.md  FOUNDATION_MODELS.md  GITHUB_DESKTOP_GUIDE_FA.md  GITHUB_PAGES_GUIDE.md  GOOGLE_SEARCH_CONSOLE_GUIDE.md  GOOGLE_SEARCH_CONSOLE_GUIDE_FA.md  METHODOLOGY.md  MLOPS.md  RELEASE_GUIDE.md  RELEASE_NOTES_v1.0.1.md  RENAME_REPOSITORY.md  REPRODUCIBILITY.md  RESEARCH_QUESTIONS.md  TEACHING_SYLLABUS.md  UPLOAD_WITH_GITHUB_DESKTOP.md  ZENODO_SOFTWARE_GUIDE.md
examples/: inference_example.py
legacy/: README.md  original-file-manifest.json
model_registry/: README.md  example-metadata.json
models/: README.md
monitoring/: drift-report-schema.json
notebooks/: 00_project_origin.ipynb  01_dataset_audit.ipynb  02_model_benchmark.ipynb  03_explainability_and_uncertainty.ipynb  04_whole_slide_and_mil.ipynb
reports/: BUILD_REPORT.md  FILE_CREATION_REPORT.md  TECHNICAL_REPORT_TEMPLATE.md  TEST_REPORT.md  benchmark_results.csv  (+2 more)
(+67 files in other folders)
