[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "computational-pathology-ai-lab"
version = "1.0.0"
description = "Research and engineering platform for computational pathology AI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{name = "Faramarz Kowsari"}]
keywords = ["computational-pathology", "medical-ai", "histopathology", "computer-vision", "mlops"]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "Pillow>=10.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "PyYAML>=6.0",
  "torch>=2.2",
  "torchvision>=0.17",
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "typer>=0.12",
  "python-multipart>=0.0.9",
  "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.5", "mypy>=1.10", "httpx>=0.27", "build>=1.2"]
mlops = ["mlflow>=2.14", "dvc>=3.50"]
ui = ["streamlit>=1.36"]
wsi = ["openslide-python>=1.3"]
all = ["mlflow>=2.14", "dvc>=3.50", "streamlit>=1.36", "openslide-python>=1.3"]

[project.scripts]
cpathlab = "cpathlab.cli:app"

[project.urls]
Homepage = "https://FaramarzKowsari.github.io/computational-pathology-ai-lab/"
Repository = "https://github.com/FaramarzKowsari/computational-pathology-ai-lab"
Book = "https://doi.org/10.5281/zenodo.21444837"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["legacy", "notebooks"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
exclude = "legacy|notebooks"
